<resources>

    <string name="app_name">[Task 08] GUI Login y Registro</string>
    <string name="username">Usuario</string>
    <string name="incorrect_username">Usuario Incorrecto</string>
    <string name="password">Contraseña</string>
    <string name="incorrect_password">Contraseña Incorrecta</string>
    <string name="forgot_password">Contraseña Olvidada</string>
    <string name="login">Acceso</string>
    <string name="singIn">Registro</string>


</resources>